# dspy-optimizers

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_fewshots.ipynb  0_baseline.ipynb  baseline.ipynb
