[project]
name = "dspy-optimizers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.11.2",
    "datasets>=3.5.0",
    "dspy>=2.6.17",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mlflow>=2.21.3",
    "python-dotenv>=1.1.0",
]
